# eberban

./: .gitignore  .travis.yml  AGENTS.md  LICENSE  README.md  camxes.html  camxes.js  camxes.peg  camxes.pegjs  camxes_postproc.js  camxes_preproc.js  design.md  index.html  lexicon.txt  package-lock.json  package.json  parser_box_glosser.htm  parser_box_glosser.html  parser_text_dynamic.html  pegjs_conv.js  predicate_chaining.txt  remove_morphology.js  reviewed_translations.md  tour.html  words.js  words.yaml
.github/: dependabot.yml
assets/: bootstrap-legacy-B2mqC3NS.js  bootstrap-legacy-JhqxZCQ6.css  bootstrap-legacy-N8hfoYcW.js  chunk-CbgXFohi.js  common-7OYOi2Y8.css  dictionary-B9UL02Gm.js  dictionary-B9de3xtX.js  dictionary-BUvJKsa9.js  dictionary-Bz6ENMnf.js  dictionary-CJarv7JK.js  dictionary-CSgQRqFH.js  dictionary-CTNWizk4.js  dictionary-CfnCA0DV.js  dictionary-ClUb3szs.css  dictionary-D61DvA0M.js  dictionary-DA-ujhfK.js  dictionary-DDkWCVMn.js  dictionary-DDqiyz-N.js  dictionary-De3bxprb.js  dictionary-Dx78-0lr.js  dictionary-Dxo8Nx2H.js  dictionary-bvpYyQLv.js  dictionary-dyk6A7Wj.js  dictionary-oBonJd1K.js  dictionary-sVuEpUqF.js  dictionary-xJGmc-6G.js  dictionary-zc5c11M0.js  dictionary-zd3IvLi4.js  en-2CUoZpQ-.js  en-BIC171vy.js  en-BIanXilk.js  en-BLgMP2w4.js  en-BdA4u4Ri.js  en-Bwtvkq4z.js  en-ByG0CD3K.js  en-ByXXfKfO.js  en-C5Y9nviQ.js  en-CD9VUJAJ.js  en-CGMHuQ7G.js  en-CRVqDtmI.js  (+78 more)
deploy/: mdbook.sh
dictionary/: check_word_ids.js  checks.js  definitions.ebb  en.yaml  (+6 more)
eberlib/: Cargo.toml  sample_usage.txt
eberlib/src/: lib.rs  main.rs
(+435 files in other folders)
