[package]
name = "eberlib"
version = "0.1.0"
authors = ["Jonathan Queiroz <dev@johnjq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
clap = "2.33"
